# faststream-poc

./: .gitignore  Dockerfile  asyncapi.yaml  docker-compose.yml  producer.py  pyproject.toml
src/: config.py  models.py  worker0.py  worker1.py  worker2.py  worker2_1.py  worker2_2.py
